--- a/src/components/organisms/bio.module.scss
+++ b/src/components/organisms/bio.module.scss
@@ -8,6 +8,12 @@
   display: flex;
   justify-content: center;
   align-items: center;
+
+  div {
+    border: solid 2px g.$theme-color;
+    border-radius: 50%;
+    overflow: hidden;
+  }
 }
 
 .name {
